# prism

./: .gitignore  CMakeLists.txt  Makefile  Quat.h  README.md  Ray.h  Timer.h  Vec3.cpp  Vec3.h  main.cpp
minifb/: CMakeLists.txt  MacMiniFB.m  README.md
